# dora

./: .gitignore  CONTRIBUTING.md  Install-Dora.bat  LICENSE  README.md  config.json  install.ps1  main.py  permissions.json  permissions.json.example  pyproject.toml  requirements.txt  run_dora.bat  update_dora.bat  update_dora.ps1
.github/workflows/: ci.yml  release.yml
core/: __init__.py  app_close.py  app_resolve.py  application.py  bootstrap.py  cli.py  config.py  config_helpers.py  console_ui.py  discovery.py  executor.py  listener.py  llama_runtime.py  llama_server.py  logging_config.py  paths.py  permissions.py  platform_check.py  session.py  status_overlay.py  system_actions.py  system_intents.py  tts.py  wake_config.py  win_com.py  win_netsh.py  win_subprocess.py  win_wmi.py  windows_startup.py
core/assistant/: __init__.py  assistant.py  protocol.py
core/assistant/mixins/: dispatch.py  input.py  overlay.py  startup.py
core/intent/: __init__.py  arithmetic.py  constants.py  conversational.py  llm_client.py  ollama_client.py  parser.py  prompts.py  rules.py  safety.py
core/listener/: __init__.py  audio.py  vosk_listener.py  whisper_listener.py
dora_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build-release-zip.ps1  build_release_zip.py  first_run_setup.py  migrate_config.py  verify_llm_load.py
tests/: test_app_resolve.py  test_application.py  test_arithmetic.py  test_audio.py  test_audio_preroll.py  test_config.py  test_config_helpers.py  test_config_migration.py  test_config_validation.py  test_console_ui.py  test_conversational.py  test_discovery.py  test_executor.py  test_integration_audio.py  test_integration_dispatch.py  test_integration_llama.py  test_listener_factory.py  test_llama_runtime.py  test_llama_server.py  test_llm_client.py  test_logging_config.py  test_parser.py  test_paths.py  test_permissions.py  test_platform.py  test_prompts.py  test_rules.py  test_safety.py  test_session.py  test_status_overlay.py  test_system_brightness_hotspot.py  test_system_intents.py  test_system_volume.py  test_trust_mapped_apps_default.py  test_tts.py  test_wake_config.py  test_whisper_listener.py  test_win_com.py  test_win_netsh.py  test_win_subprocess.py  (+1 more)
