[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora-assistant"
version = "0.1.0"
description = "Dora — Windows voice assistant (Vosk STT, Ollama intents, local controls)"
requires-python = ">=3.10"
dependencies = [
    "comtypes>=1.4.0",
    "ollama>=0.3.0",
    "pycaw>=20240210",
    "rich>=13.0.0",
    "sounddevice>=0.4.0",
    "vosk>=0.3.45",
    "word2number>=1.1",
]

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]
whisper = ["faster-whisper>=1.0.0"]

[project.scripts]
dora = "core.cli:main"
dora-background = "core.cli:main_background"

[tool.setuptools.packages.find]
include = ["core*"]
