[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora"
version = "0.1.0"
description = "Dora — Windows voice assistant (Vosk STT, bundled llama.cpp, local GGUF)"
requires-python = ">=3.10"
dependencies = [
    "comtypes>=1.4.0",
    "pycaw>=20240210",
    "rich>=13.0.0",
    "sounddevice>=0.4.0",
    "vosk>=0.3.45",
    "word2number>=1.1",
]

[project.optional-dependencies]
dev = ["mypy>=1.11", "pyinstaller>=6.0", "pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8.0"]
whisper = ["faster-whisper>=1.0.0"]

[project.scripts]
dora = "core.cli:main"
dora-background = "core.cli:main_background"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=core --cov-report=term-missing --cov-fail-under=39"

[tool.coverage.run]
branch = true
omit = ["tests/*", "scripts/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["I001", "E501"]
"core/intent/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["core"]
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "core.assistant.*",
    "core.listener.whisper_listener",
    "core.bootstrap",
    "core.executor",
    "core.cli",
    "core.win_subprocess",
    "core.win_com",
]
disable_error_code = ["attr-defined", "unused-ignore", "assignment"]
